  (Nicolás Ojeda Bär, review by Xavier Leroy, David Allsop, Javier
  Chávarri, Anil Madhavapeddy)

- #12103, 12104: fix a concurrency memory-safety bug in Buffer
  (Gabriel Scherer, review by Florian Angeletti, report by Samuel Hym)

- #12112: Fix caml_callback{2,3}_exn when used with effect handlers.
  (Lucas Pluvinage, review by Gabriel Scherer, David Allsopp and Xavier Leroy)

- #12153: Fix segfault in bytecode programs involving recursive value
  definitions of values of size 0
  (Vincent Laviron, Xavier Leroy, Gabriel Scherer,
   review by Xavier Leroy, report by Nick Roberts)

- #12162: Fix miscompilation on amd64 backends involving integer overflows
  (Vincent Laviron and Greta Yorsh, review by Stefan Muenzel)

OCaml 5.0.0 (15 December 2022)
------------------------------

- #10831: Multicore OCaml
  (Enguerrand Decorne, Stephen Dolan, Tom Kelly, Sadiq Jaffer,
  Anil Madhavapeddy, Sudha Parimala, KC Sivaramakrishnan,
  Leo White, the Tarides multicore team,
  review by Florian Angeletti, Damien Doligez, Xavier Leroy,
  Guillaume Munch-Maccagnoni, Olivier Nicole, Nicolás Ojeda Bär,
  Gabriel Scherer, the OCaml core development team, and many
  other valued reviewers.)

### Language features:

### Runtime system:

- #11400: Runtime events counters fixes
  Fixes mismatch between OCaml and C APIs, removes events from 4.x that
  are not present in the 5.0 GC and adds some missing probes.
  (Sadiq Jaffer, review by Gabriel Scherer, Florian Angeletti)

- #11368: Runtime events buffer size OCAMLRUNPARAMS fix
  The runtime events buffer size can now be set via the 'e' OCAMLRUNPARAM.
  This is previously mistakenly enabled/disabled tracing instead.
  (Sadiq Jaffer, review by KC Sivaramakrishnan, David Allsopp, Damien Doligez)

- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the
  runtime will not remove the runtime events ring buffers at exit. This